обавлен логотип и обновлена цветовая схема
- аменен текстовый логотип на изображение logo.jfif
- величен размер логотипа для лучшей видимости
- зменен основной цвет с #FF4F00 на #D45319 (более спокойный)
- обавлено тонкое выделение логотипа в темной теме
- справлен фон страницы личного кабинета (белый в светлой теме)
- бновлены версии CSS файлов для кэша

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Образовательный центр</title>
-    <link rel="stylesheet" href="styles.css?v=44">
+    <link rel="stylesheet" href="styles.css?v=46">
     <link href="https://fonts.googleapis.com/css2?family=Geometria:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -12,9 +12,9 @@
     <!-- Навигационная панель -->
     <nav class="navbar">
         <div class="nav-container">
-            <!-- Место для логотипа -->
-            <div class="logo-placeholder">
-                <div class="logo-text">ЛОГОТИП</div>
+            <!-- Логотип -->
+            <div class="logo-container">
+                <img src="images/logo.jfif" alt="Логотип" class="logo-image">
             </div>
             
             <!-- Навигационное меню -->
