бновление функциональности личного кабинета и превью документов
- аменены iframe превью документов на PNG изображения из папки docs_prew
- обавлены специальные поля для администратора в формах входа/регистрации
- Улучшено переключение между режимами ользователь/дминистрация
- обавлены отладочные сообщения для диагностики
- справлены CSS стили для анимации полей администратора

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="documents-grid">
                     <div class="document-item">
                         <div class="document-preview">
-                            <iframe src="images/docs/ИНН.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0&statusbar=0&messages=0" width="100%" height="100%" frameborder="0"></iframe>
+                            <img src="images/docs_prew/ИНН.png" alt="ИНН" class="document-preview-img">
                         </div>
                         <div class="document-info">
                             <h3 class="document-name">ИНН</h3>
@@ -357,7 +357,7 @@
 
                     <div class="document-item">
                         <div class="document-preview">
-                            <iframe src="images/docs/Лицензия.pdf#toolbar=0&navpanes=0&scrollbar=0&statusbar=0&messages=0&view=Fit" width="100%" height="100%" frameborder="0" style="border: none; overflow: hidden;"></iframe>
+                            <img src="images/docs_prew/Лицензия-1.png" alt="Лицензия" class="document-preview-img">
                         </div>
                         <div class="document-info">
                             <h3 class="document-name">Лицензия</h3>
@@ -366,7 +366,7 @@
 
                     <div class="document-item">
                         <div class="document-preview">
-                            <iframe src="images/docs/О регистрации НКО.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0&statusbar=0&messages=0" width="100%" height="100%" frameborder="0"></iframe>
+                            <img src="images/docs_prew/О регистрации НКО.png" alt="О регистрации НКО" class="document-preview-img">
                         </div>
                         <div class="document-info">
                             <h3 class="document-name">О регистрации НКО</h3>
@@ -375,7 +375,7 @@
 
                     <div class="document-item">
                         <div class="document-preview">
-                            <iframe src="images/docs/Свидетельство ОРГН.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0&statusbar=0&messages=0" width="100%" height="100%" frameborder="0"></iframe>
+                            <img src="images/docs_prew/Свидетельство ОРГН.png" alt="Свидетельство ОГРН" class="document-preview-img">
                         </div>
                         <div class="document-info">
                             <h3 class="document-name">Свидетельство ОГРН</h3>
@@ -384,7 +384,7 @@
 
                     <div class="document-item">
                         <div class="document-preview">
-                            <iframe src="images/docs/уведомление об аккредитации.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0&statusbar=0&messages=0" width="100%" height="100%" frameborder="0"></iframe>
+                            <img src="images/docs_prew/уведомление об аккредитации.png" alt="Уведомление об аккредитации" class="document-preview-img">
                         </div>
                         <div class="document-info">
                             <h3 class="document-name">Уведомление об аккредитации</h3>
