бновлена цветовая схема: светлая тема - белый фон, серые контейнеры; темная тема - темный фон, серые контейнеры; добавлены премиальные анимации 0.4s ease

--- a/services.html
+++ b/services.html
@@ -597,7 +597,7 @@
             // Функция для скрытия панели
             function hideSidebar() {
                 sidebar.classList.add('collapsed');
-                servicesContent.style.marginLeft = '0';
+                servicesContent.style.marginLeft = '100px'; // Оставляем место для видимой части панели
             }
             
             // Функция для автозакрытия с проверкой курсора
